# libsdp

./: Cargo.toml  Readme.md
src/: lib.rs  offer.rs  parse.rs  sanitizer.rs
src/attributes/: mod.rs  optional.rs  rtpmap.rs  ty.rs
src/core/: address_type.rs  bandwidth.rs  codec.rs  mod.rs  network_type.rs  protocol.rs  transport.rs
src/lines/: connection.rs  mod.rs  origin.rs  session_name.rs  timing.rs  version.rs
src/media/: encoding.rs  media_format.rs  media_type.rs  mod.rs  parse.rs
tests/: connection.rs  origin.rs  sanitizer.rs  tests.rs  timing.rs
tests/examples/: mod.rs  wikipedia.rs  wireshark_g711.rs  work.rs
